--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ table {
 }
 
 .header {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-image: url(./images/background1.png);
   background-repeat: no-repeat;
@@ -281,5 +281,318 @@ table {
   font-family: "Montserrat", sans-serif;
   letter-spacing: 1px;
   line-height: 1.4;
+}
+
+.placetovisit {
+  margin-top: 100px;
+  margin-left: 15%;
+  font-family: "Abel", sans-serif;
+  font-size: 36px;
+}
+
+ul {
+  margin-left: 15%;
+  margin-top: 30px;
+}
+
+ul li {
+  font-family: "Montserrat", sans-serif;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 20px;
+}
+
+ul li img {
+  width: 30px;
+  margin-right: 10px;
+}
+
+.footerhead {
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.footerhead h3 {
+  text-align: center;
+  font-family: "Abel", sans-serif;
+  font-size: 36px;
+}
+
+.footerhead h4 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 10px;
+  font-size: 24px;
+}
+
+.footerhead p {
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+  margin-top: 10px;
+}
+
+footer {
+  background-color: #14274A;
+  width: 100%;
+  display: -ms-grid;
+  display: grid;
+  padding: 20px 40px;
+      grid-template-areas: 'area1 area2 area3 area4';
+  color: white;
+  text-align: center;
+  font-family: "Abel", sans-serif;
+}
+
+footer .col1 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: area1;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: 0 auto;
+}
+
+footer .col1 .logo h4 {
+  letter-spacing: 3px;
+  font-size: 22px;
+}
+
+footer .col1 .logo p {
+  font-size: 10px;
+  letter-spacing: 5px;
+}
+
+footer .col1 .address {
+  text-align: start;
+  font-size: 12px;
+  margin-top: 20px;
+}
+
+footer .col2 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: area2;
+}
+
+footer .col2 .list {
+  margin: 0;
+  font-size: 13px;
+}
+
+footer .col2 .list a {
+  text-decoration: none;
+  color: white;
+}
+
+footer .col3 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
+  grid-area: area3;
+  text-align: start;
+}
+
+footer .col3 .list {
+  margin: 0;
+  font-size: 15px;
+}
+
+footer .col3 .list img {
+  width: 15px;
+}
+
+footer .col3 .list a {
+  text-decoration: none;
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+footer .col4 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 4;
+  grid-area: area4;
+  text-align: start;
+}
+
+footer .col4 input {
+  border: 3px solid #E0B973;
+  margin: -4px;
+  margin-top: 10px;
+}
+
+footer .col4 input:focus {
+  outline: none;
+}
+
+footer .col4 input[type=text] {
+  width: 150px;
+  height: 20px;
+  background-color: #14274A;
+  color: white;
+}
+
+footer .col4 input[type=text]::-webkit-input-placeholder {
+  color: white;
+  font-family: "Montserrat", sans-serif;
+}
+
+footer .col4 input[type=text]:-ms-input-placeholder {
+  color: white;
+  font-family: "Montserrat", sans-serif;
+}
+
+footer .col4 input[type=text]::-ms-input-placeholder {
+  color: white;
+  font-family: "Montserrat", sans-serif;
+}
+
+footer .col4 input[type=text]::placeholder {
+  color: white;
+  font-family: "Montserrat", sans-serif;
+}
+
+footer .col4 input[type=submit] {
+  background-color: #E0B973;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  color: #14274A;
+  margin: 0;
+  height: 28px;
+}
+
+@media screen and (max-width: 1132px) {
+  .header {
+    width: 100vw;
+    background-position-x: -884px;
+  }
+  .header .grid-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .header .navbar {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
+  .header .navbar li {
+    margin-bottom: 25px;
+  }
+  .header h1 {
+    margin-top: 100px;
+    margin-left: 50px;
+    font-size: 70px;
+  }
+  .header h1 span {
+    font-size: 40px;
+  }
+  .header .btn-reservation {
+    width: 212px;
+    height: 45px;
+  }
+  .header .btn-reservation span {
+    font-size: 17px;
+  }
+  .secrooms {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .secrooms::before {
+    display: none;
+  }
+  .secrooms .photo {
+    width: 95%;
+    margin: 0 auto;
+  }
+  .secrooms .photo img {
+    width: 100%;
+  }
+  .secrooms .info {
+    width: 95%;
+    margin: 20px auto;
+  }
+  .secrooms .info .title {
+    font-size: 34px;
+  }
+  .seclocation {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .seclocation::before {
+    display: none;
+  }
+  .seclocation .photo {
+    width: 95%;
+    margin: 0 auto;
+  }
+  .seclocation .photo img {
+    width: 100%;
+  }
+  .seclocation .info {
+    width: 95%;
+    margin: 20px auto;
+  }
+  .seclocation .info .title {
+    font-size: 34px;
+  }
+  .sec {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .sec .note {
+    width: 95%;
+    margin: 10px 0;
+    text-align: center;
+  }
+  .footerhead h3 {
+    font-size: 27px;
+  }
+  .footerhead h4 {
+    font-size: 17px;
+  }
+  .footerhead p {
+    font-size: 14px;
+  }
+  footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  footer .col1 {
+    margin: 0;
+  }
+  footer .col1 .address {
+    margin-top: 33px;
+  }
+  footer div {
+    margin-top: 20px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
