--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,6 @@
 @import "./reset";
 @import "./abstracts";
 @import "./welcomepage";
-@import "./mainsection"
+@import "./mainsection";
+@import "./footer";
+@import "./mediaqueries";
